# picojson-rs

./: .gitignore  .pre-commit-config.yaml  CLEANER_REFACTOR.md  CONFIGURATION.md  Cargo.toml  DESIGN.md  LICENSE  PUSH_PARSER_CHALLENGES.md  README.md  REF.md  REF2.md  REF3.md  REF4.md  REF5.md  TODO.md
.github/workflows/: avr_tests.yaml  build.yaml  coverage.yml  cross.yaml
avr_demo/: Cargo.toml  avrsim_wrapper.py  build.rs  run_suite.py  rust-toolchain.toml  simavr_wrapper.py
avr_demo/.cargo/: config.toml
avr_demo/examples/: blinky.rs  minimal.rs  test_picojson.rs  test_serde.rs  test_streamparser.rs
avr_demo/src/: lib.rs  stack_measurement.rs
demos/: Cargo.toml
demos/src/: lib.rs
docs/: _config.yml  index.md
picojson/: Cargo.toml  README.md  build.rs
picojson/examples/: advanced_bitstack_demo.rs  array_bitstack_demo.rs  direct_parser_demo.rs  no_float_demo.rs  push_parser_demo.rs  simple_api_demo.rs  stream_parser_demo.rs  test_surrogate_pairs.rs
picojson/src/: chunk_reader.rs  config_check.rs  content_builder.rs  copy_on_escape.rs  debug_test.rs  direct_buffer.rs  direct_parser.rs  escape_processor.rs  event_processor.rs  flex_parser.rs  int_parser.rs  json_number.rs  json_string.rs  lib.rs  number_parser.rs  parse_error.rs  parser_core.rs  pull_parser.rs  push_content_builder.rs  push_parser.rs  shared.rs  simple_debug.rs  slice_content_builder.rs  slice_input_buffer.rs  slice_parser.rs  stream_buffer.rs  stream_content_builder.rs  stream_parser.rs
picojson/src/tokenizer/: README.md  mod.rs
picojson/src/tokenizer/bitstack/: mod.rs
picojson/src/tokenizer/tokenizer/: mod.rs
picojson/src/ujson/: mod.rs
picojson/src/ujson/bitstack/: mod.rs
picojson/src/ujson/tokenizer/: mod.rs
picojson/tests/: api_test.rs  api_test_errors.rs  array_bitstack_test.rs  configurable_numbers.rs  conformance_tests.rs  debug_root_numbers.rs  debug_stress_case.rs  direct_parser_config_test.rs  generated_conformance_tests.rs  input_buffer_full_test.rs  json_checker_tests.rs  json_number_ergonomics_test.rs  push_parser.rs  push_parser_copy_on_escape.rs  push_parser_escapes.rs  push_parser_invalidslicebounds_repro.rs  push_parser_stress_test.rs  selective_extraction.rs  stream_parser_config_test.rs  stream_parser_larger_buffer.rs  stream_parser_stress_test.rs  surrogate_pairs.rs
picojson/tests/data/: README.md
stax/: Cargo.toml  README.md
stax/examples/: advanced_bitstack_demo.rs  array_bitstack_demo.rs  direct_parser_demo.rs  no_float_demo.rs  simple_api_demo.rs
stax/src/: config_check.rs  copy_on_escape.rs  direct_buffer.rs  direct_parser.rs  escape_processor.rs  flex_parser.rs  json_number.rs  json_string.rs  lib.rs  number_parser.rs  shared.rs  slice_input_buffer.rs
stax/tests/: api_test.rs  api_test_errors.rs  configurable_numbers.rs  debug_root_numbers.rs
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs
tokenizer/src/bitstack/: mod.rs
tokenizer/src/tokenizer/: mod.rs
tokenizer/tests/: array_bitstack_test.rs
