# Profile specific rustflags for panic checking
cargo-features = ["profile-rustflags"]

[package]
name = "avr_demo"
version = "0.1.0"
edition = "2024"
autobins = false
autotests = false
autobenches = false

[dependencies]
picojson = { path = "../picojson", default-features = false, features = ["int32"]}
panic-halt = "1.0"
ufmt = { version = "0.2", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ravedude-0.2.0"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

# Build profile for investigating panics in the code
# We don't want to optimize away any code, but do
# enable dead code elimination.
[profile.panic_checks]
inherits = "dev"
panic = "abort"
opt-level = 1         # Minimal code size optimizations, mostly just DCE
lto = "fat"           # Enable fat LTO for better dead code elimination
codegen-units = 1       # helps DCE across units
strip = "none"          # Keep symbols
debug = "full"
incremental = false
overflow-checks = true  # Enable ( it's a default, but we want to be explicit )
# Disable the compiler's built-in undefined behavior checks.
# These checks can insert their own panic paths, creating noise in our analysis.
# We are focused on panics from application logic (e.g., unwrap, bounds checks),
# so disabling these helps narrow the focus. This is an unstable flag.
rustflags = ["-Z", "ub-checks=no"]

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[features]
default = ["depth-7", "pico-tiny", "ufmt"]

depth-7 = []
depth-9 = []
depth-31 = []
depth-33 = []
depth-63 = []
depth-65 = []
depth-127 = []
depth-129 = []
depth-255 = []
depth-257 = []
depth-511 = []
depth-513 = []
depth-1023 = []
depth-1025 = []

debug-trace = []

pico-small = []
pico-huge = []
pico-tiny = []
