# Profile specific rustflags for panic checking
cargo-features = ["profile-rustflags"]

[package]
name = "avr_demo"
version = "0.1.0"
edition = "2024"
autobins = false
autotests = false
autobenches = false

[dependencies]
picojson = { path = "../picojson", default-features = false}
ufmt = { version = "0.2", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ravedude-0.2.0"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"
lto = "fat"
opt-level = "z"         # Least amount of panic generation
codegen-units = 1       # helps DCE across units
strip = "none"          # Keep symbols
debug = "full"
# Disable the compiler's built-in undefined behavior checks.
# These checks can insert their own panic paths, creating noise in our analysis.
# We are focused on panics from application logic (e.g., unwrap, bounds checks),
# so disabling these helps narrow the focus. This is an unstable flag.
rustflags = ["-Z", "ub-checks=no"]

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[features]
default = ["depth-7", "pico-tiny", "ufmt", "int8"]

int8 = [ "picojson/int8"]
int32 = [ "picojson/int32"]

depth-7 = []
depth-9 = []
depth-30 = []
depth-33 = []
depth-62 = []
depth-65 = []
depth-126 = []
depth-129 = []
depth-254 = []
depth-257 = []
depth-510 = []
depth-513 = []
depth-1022 = []
depth-1025 = []

pico-small = []
pico-huge = []
pico-tiny = []
