[package]
name = "picojson"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["kaidokert <kaidokert@gmail.com>"]
readme = "../README.md"
description = """
A resource-constrained JSON parser for embedded systems.
"""
repository = "https://github.com/kaidokert/picojson-rs"
homepage = "https://github.com/kaidokert/picojson-rs"
keywords = ["json", "static", "no-heap"]
categories = [
    "embedded",
    "no-std",
]

[features]
default = ["int64", "float"]     # Default to full support: 64-bit integers and floating point
float = []              # Enable f64 parsing support

# Integer width options (mutually exclusive)
int32 = []              # Use i32 for integers (embedded-friendly)
int64 = []              # Use i64 for integers (full range)

# Float behavior when float feature is disabled (mutually exclusive)
float-skip = []         # Skip float values during parsing (continue with next token)
float-error = []        # Error when encountering floats
float-truncate = []     # Truncate floats to integers (1.7 → 1)
defmt = ["dep:defmt"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
# TODO: Optional, should be swappable with defmt
log = "0.4"

[dev-dependencies]
test-log = "0.2"
env_logger = "0.11.3"
test-env-log = "0.2.8"
