[package]
name = "picojson"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
exclude = ["/.github/**"]
authors = ["kaidokert <kaidokert@gmail.com>"]
readme = "../README.md"
description = """
A resource-constrained JSON parser for embedded systems.
"""
repository = "https://github.com/kaidokert/picojson-rs"
homepage = "https://github.com/kaidokert/picojson-rs"
documentation = "https://docs.rs/picojson"
keywords = ["json", "parser", "embedded", "no-std", "no-heap"]
categories = [
    "embedded",
    "no-std",
    "parser-implementations"
]

[features]
default = ["int64", "float"]     # Default to full support: 64-bit integers and floating point
float = []              # Enable f64 parsing support

# Integer width options (mutually exclusive)
int8  = []              # Use i8 for integers (8-bit)
int32 = []              # Use i32 for integers (embedded-friendly)
int64 = []              # Use i64 for integers (full range)

# Float behavior when float feature is disabled (mutually exclusive)
float-skip = []         # Skip float values during parsing (continue with next token)
float-error = []        # Error when encountering floats
float-truncate = []     # Truncate floats to integers (1.7 → 1)

[dependencies]
log = "0.4.27"

[dev-dependencies]
env_logger = "0.11"
test-log = "0.2"
