[package]
name = "picojson"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
exclude = ["/.github/**"]
authors = ["kaidokert <kaidokert@gmail.com>"]
readme = "../README.md"
description = """
A resource-constrained JSON parser for embedded systems.
"""
repository = "https://github.com/kaidokert/picojson-rs"
homepage = "https://github.com/kaidokert/picojson-rs"
documentation = "https://docs.rs/picojson"
keywords = ["json", "parser", "embedded", "no-std", "no-heap"]
categories = [
    "embedded",
    "no-std",
    "parser-implementations"
]

[features]
default = ["int64", "float"]     # Default to full support: 64-bit integers and floating point
float = []              # Enable f64 parsing support

# Integer width options (mutually exclusive)
int8  = []              # Use i8 for integers (8-bit)
int32 = []              # Use i32 for integers (embedded-friendly)
int64 = []              # Use i64 for integers (full range)

# Float behavior when float feature is disabled (mutually exclusive)
float-skip = []         # Skip float values during parsing (continue with next token)
float-error = []        # Error when encountering floats
float-truncate = []     # Truncate floats to integers (1.7 → 1)

# Remote conformance test suites
remote-tests = ["dep:ureq", "dep:zip"]

[package.metadata.conformance-tests]
# JSONTestSuite configuration
jsontest-suite-url = "https://github.com/nst/JSONTestSuite/archive/{commit}.zip"
jsontest-suite-commit = "1ef36fa01286573e846ac449e8683f8833c5b26a"
# JSON_checker URL - stable URL from json.org
json-checker-url = "http://www.json.org/JSON_checker/test.zip"

[build-dependencies]
ureq = { version = "2.0", optional = true }
zip = { version = "0.6", optional = true }

[dev-dependencies]
paste = "1.0"
