[package]
name = "stax"
version = "0.1.0"
edition = "2021"

[features]
default = ["int64"]     # Default to 64-bit integers for compatibility
float = []              # Enable f64 parsing support

# Integer width options (mutually exclusive)
int32 = []              # Use i32 for integers (embedded-friendly)
int64 = []              # Use i64 for integers (full range)

# Float behavior when float feature is disabled (mutually exclusive)
float-skip = []         # Skip float values during parsing (continue with next token)
float-error = []        # Error when encountering floats
float-truncate = []     # Truncate floats to integers (1.7 → 1)
defmt = ["dep:defmt"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
# TODO: Optional, should be swappable with defmt
log = "0.4.26"
ujson = { path= "../tokenizer" }

[dev-dependencies]
test-log = "0.2"
env_logger = "0.11.3"
test-env-log = "0.2.8"
